# HoopDeck

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: daily-update.yml  roster-update.yml  salary-update.yml
api/: cba_rules.py  db.py  lineup_engine.py  main.py  team_fit.py
api/routers/: lineups.py  players.py  stats.py  teams.py  trades.py
data/: build_card_data.py  check_player_photos.py  detect_roster_discrepancies.py  fit_lineup_model.py  fit_weights.py  generate_player_dataset.py  generate_shot_dataset.py  generate_team_dataset.py  rating_lib.py  update_current_season.py  update_player_salaries.py  update_team_rosters.py
data/db/: loader.py  schema.sql
data/output/: lineup_model_nba.json  lineup_model_wnba.json
data/seed/: draft_picks_nba.json  draft_picks_wnba.json  load_draft_picks.py  roster_overrides_nba.json  roster_overrides_wnba.json  salary_overrides_nba.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: ChartBuilder.module.css  ChartBuilder.tsx  CookieConsent.module.css  CookieConsent.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  HomeGallery.tsx  LineupBuilder.module.css  LineupBuilder.tsx  LineupResultModal.module.css  LineupResultModal.tsx  PlayerCard.module.css  PlayerCard.tsx  PlayerDetail.module.css  PlayerDetail.tsx  PlayersExplorer.module.css  PlayersExplorer.tsx  SearchBar.module.css  SearchBar.tsx  TradeResultModal.module.css  TradeResultModal.tsx  TradeSimulator.module.css  (+1 more)
(+23 files in other folders)
