[project]
name = "hoopdeck"
version = "0.1.0"
description = "HoopDeck — pixel-art NBA player cards, lineup simulator, and stat charts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basketball-reference-scraper>=2.0.0",
    "fastapi>=0.138.1",
    "nba-api>=1.11.4",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
